--- a/components/TaskHistoryView.module.css
+++ b/components/TaskHistoryView.module.css
@@ -1,6 +1,11 @@
 .table {
-    /*--ac-table-row-hover: var(--a-surface-action-subtle-hover);*/
     table-layout: auto;
+}
+
+.tableTitle {
+    text-align: start;
+    padding: var(--a-spacing-3) var(--a-spacing-2);
+    background: var(--a-bg-default);
 }
 
 .table tr:last-of-type td {
