Ikke vis task-id i tabellen

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-areas: 'filters' 'table' 'footer';
     grid-template-rows: max-content auto max-content;
+    padding: 1rem;
 }
 
 .tableContainer {
