--- a/components/Desktop.module.css
+++ b/components/Desktop.module.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   padding: var(--a-spacing-5);
   background: rgb(0, 128, 128);
+  overflow: hidden;
 }
 
 @media (max-width: 479px) {
