--- a/app/StartMenuButton.module.css
+++ b/app/StartMenuButton.module.css
@@ -3,25 +3,33 @@
 }
 
 .startButton.active {
-  padding-top: 2px;
+    padding-top: 2px;
 }
 
 .startButton.active:before {
-  border-style: solid;
-  border-width: 2px;
-  border-color: rgb(10, 10, 10) rgb(254, 254, 254) rgb(254, 254, 254)
-  rgb(10, 10, 10);
-  box-shadow:
-      rgb(132, 133, 132) 1px 1px 0 1px inset,
-      rgb(223, 223, 223) -1px -1px 0 1px inset;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(10, 10, 10) rgb(254, 254, 254) rgb(254, 254, 254)
+        rgb(10, 10, 10);
+    box-shadow:
+        rgb(132, 133, 132) 1px 1px 0 1px inset,
+        rgb(223, 223, 223) -1px -1px 0 1px inset;
 }
 
 .startButton.active:after {
-  top: 1px;
+    top: 1px;
 }
 
 .menu {
+    width: max-content;
     position: absolute;
     top: 100%;
     left: 0;
+}
+
+.menuItem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
 }
