--- a/components/window/Window.module.css
+++ b/components/window/Window.module.css
@@ -26,7 +26,7 @@
     padding-left: 0.25rem;
     padding-right: 3px;
     border: 2px solid rgb(198, 198, 198);
-    background: rgb(6, 0, 132);
+    background: var(--semantic-color-interaction-primary);
 }
 
 .title {
