--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 8px;
     height: 36px;
     width: max-content;
     padding: 0 10px;
@@ -48,7 +49,7 @@
     padding-top: 2px;
 }
 
-.button:active:before {
+.button:active:not(:disabled):before {
     border-style: solid;
     border-width: 2px;
     border-color: rgb(10, 10, 10) rgb(254, 254, 254) rgb(254, 254, 254)
@@ -69,4 +70,9 @@
 .button:focus:after {
     outline: rgb(10, 10, 10) dotted 2px;
     outline-offset: -8px;
+}
+
+.button:disabled {
+    color: rgb(132, 133, 132);
+    text-shadow: 1px 1px white;
 }
