--- a/components/Metadata.module.css
+++ b/components/Metadata.module.css
@@ -1,4 +1,7 @@
 .metadata {
     padding-inline-start: 0;
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: var(--a-spacing-1);
 }
