--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,8 +3,8 @@
     min-height: 100%;
     position: relative;
     display: grid;
-    grid-template-areas: 'filters' 'table' 'footer';
-    grid-template-rows: max-content auto max-content;
+    grid-template-areas: 'filters' 'refetch' 'table' 'footer';
+    grid-template-rows: max-content max-content auto max-content;
     padding: 1rem;
 }
 
