--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,7 +3,7 @@
     min-height: 100%;
     position: relative;
     display: grid;
-    grid-template-areas: 'filters' 'refetch' 'table' 'footer';
+    grid-template-areas: 'filters' 'refresher' 'table' 'footer';
     grid-template-rows: max-content max-content auto max-content;
     padding: 1rem;
 }
