--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,16 +1,4 @@
-.header {
-    border-style: solid;
-    border-width: 2px;
-    border-color: rgb(254, 254, 254) rgb(10, 10, 10) rgb(10, 10, 10)
-        rgb(254, 254, 254);
-    box-shadow:
-        rgb(223, 223, 223) 1px 1px 0 1px inset,
-        rgb(132, 133, 132) -1px -1px 0 1px inset;
-    background: rgb(198, 198, 198);
-    color: rgb(10, 10, 10);
+.title {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 4px;
+    gap: var(--a-spacing-2);
 }
