--- a/components/Filtere.module.css
+++ b/components/Filtere.module.css
@@ -22,9 +22,8 @@
   min-height: 80px;
 }
 
-.filter {
-  flex: unset;
-  width: 100%;
+.input {
+  width: 330px;
 }
 
 @media screen and (max-width: 767px) {
